[project]
name = "agent-loop-ledger"
version = "0.1.0"
description = "Detect dead-end loops in agentic tool-calling workflows via a normalised tool-call ledger"
readme = "README.md"
license = "MIT"
authors = [{ name = "Jack Watts" }]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Repository = "https://github.com/jackawatts/agent-loop-ledger-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_loop_ledger"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.8"]
